added routes to translation file, deleted unused variables

--- a/public/locales/en-US/translation.json
+++ b/public/locales/en-US/translation.json
@@ -2,7 +2,9 @@
   "projectTitle": "Civic Innovation Corps @ NYC MOCTO",
   "links": {
     "team": "Team",
-    "contact": "Contact"
+    "teamRoute": "/",
+    "contact": "Contact",
+    "contactRoute": "/contact"
   },
   "subheadings": {
     "team": "Meet Our Team",
