--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -1,52 +1,52 @@
 {
-  "projectTitle": "[Spanish Translation in Progress] Civic Innovation Corps @ NYC MOCTO",
+  "projectTitle": "[sp] Civic Innovation Corps @ NYC MOCTO",
   "links": {
-    "team": "[Spanish Translation in Progress] Team",
+    "team": "[sp] Team",
     "teamRoute": "/",
-    "contact": "[Spanish Translation in Progress] Contact",
+    "contact": "[sp] Contact",
     "contactRoute": "/contact"
   },
   "subheadings": {
-    "team": "[Spanish Translation in Progress] Meet Our Team",
-    "contact": "[Spanish Translation in Progress] Contact Us"
+    "team": "[sp] Meet Our Team",
+    "contact": "[sp] Contact Us"
   },
   "teamMembers": [
     {
       "id": "1",
-      "name": "[Spanish Translation in Progress] Britney Johnson",
-      "info": "[Spanish Translation in Progress] Civic Innovation Corps Member",
+      "name": "[sp] Britney Johnson",
+      "info": "[sp] Civic Innovation Corps Member",
       "photo": "https://ca.slack-edge.com/T01UA6VHC7Q-U01UM1AU2V9-4ca04b1b0dee-512"
     },
     {
       "id": "2",
-      "name": "[Spanish Translation in Progress] Kara Siegel",
-      "info": "[Spanish Translation in Progress] Civic Innovation Corps Member",
+      "name": "[sp] Kara Siegel",
+      "info": "[sp] Civic Innovation Corps Member",
       "photo": "https://ca.slack-edge.com/T01UA6VHC7Q-U01VAJR5W72-d813fd8f70df-512"
     },
     {
       "id": "3",
-      "name": "[Spanish Translation in Progress] Michelle Liu",
-      "info": "[Spanish Translation in Progress] Civic Innovation Corps Member",
+      "name": "[sp] Michelle Liu",
+      "info": "[sp] Civic Innovation Corps Member",
       "photo": "https://ca.slack-edge.com/T01UA6VHC7Q-U01UZD4LNUR-bbe96e1072eb-512"
     },
     {
       "id": "4",
-      "name": "[Spanish Translation in Progress] Saiful Islam",
-      "info": "[Spanish Translation in Progress] Civic Innovation Corps Member",
+      "name": "[sp] Saiful Islam",
+      "info": "[sp] Civic Innovation Corps Member",
       "photo": "https://ca.slack-edge.com/T01UA6VHC7Q-U01ULQH5BGS-15f7b717daa2-512"
     },
     {
       "id": "5",
-      "name": "[Spanish Translation in Progress] Anya Dunaif",
-      "info": "[Spanish Translation in Progress] Civic Innovation Corps Member",
+      "name": "[sp] Anya Dunaif",
+      "info": "[sp] Civic Innovation Corps Member",
       "photo": "https://ca.slack-edge.com/T01UA6VHC7Q-U01UE1PJ3P0-2061361ad9fe-512"
     }
   ],
-  "agency": "[Spanish Translation in Progress] NYC MOCTO",
+  "agency": "[sp] NYC MOCTO",
   "form": {
-    "email": "[Spanish Translation in Progress] Email",
-    "subject": "[Spanish Translation in Progress] Subject",
-    "message": "[Spanish Translation in Progress] Message",
-    "submit": "[Spanish Translation in Progress] Submit"
+    "email": "[sp] Email",
+    "subject": "[sp] Subject",
+    "message": "[sp] Message",
+    "submit": "[sp] Submit"
   }
 }
