based on comments updated language buttons and added translated alt attributes

--- a/public/locales/en-US/translation.json
+++ b/public/locales/en-US/translation.json
@@ -48,5 +48,8 @@
     "subject": "Subject",
     "message": "Message",
     "submit": "Submit"
+  },
+  "images": {
+    "teamMemberPhoto": "team member"
   }
 }
