--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -48,5 +48,8 @@
     "subject": "[zh] Subject",
     "message": "[zh] Message",
     "submit": "[zh] Submit"
+  },
+  "images": {
+    "teamMemberPhoto": "[zh] team member"
   }
 }
