--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -62,5 +62,8 @@
   "images": {
     "teamMemberPhoto": "team member"
   },
-  "language": "en"
+  "language": "en",
+  "getToKnowTeam": "Get to know our Civic Innovation Corps Members for Summer 2021",
+  "askUsQuestions": "Do you have any questions or comments? Let us know by filling out this form!",
+  "lorem": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 }
