select language drop down

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,7 @@
     "team": "Meet Our Team",
     "contact": "Contact Us"
   },
+  "selectLanguage": "Select Language",
   "teamMembers": [
     {
       "id": "1",
