--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -10,6 +10,7 @@
     "team": "[es] Meet Our Team",
     "contact": "[es] Contact Us"
   },
+  "selectLanguage": "[es] Select Language",
   "teamMembers": [
     {
       "id": "1",
