--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -10,6 +10,7 @@
     "team": "[zh] Meet Our Team",
     "contact": "[zh] Contact Us"
   },
+  "selectLanguage": "[zh] Select Language",
   "teamMembers": [
     {
       "id": "1",
